--- a/lvfu/webapp/templates/league.html
+++ b/lvfu/webapp/templates/league.html
@@ -53,7 +53,7 @@
     <div class="tab-content">
         <div class="tab-pane" id="all">
             {% if league.is_locked and my_team and my_team.rank != 0 %}
-                <h1 class="js-rank-line hide">
+                <h1 class="js-rank-line">
                     You are currently ranked #{{ my_team.rank }}
                     <a href="{% url 'my_team' %}" class="ui-view-team-link">(view team)</a>
                 </h1>
