--- a/lvfu/webapp/templates/team.html
+++ b/lvfu/webapp/templates/team.html
@@ -65,7 +65,7 @@
 </p>
 {% endblock %}
 
-{% block includes %}
+{% block page_includes %}
 {# Include this before Facebook to be sure it is set when the SDK loads #}
 <script>
     (function() {
