--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,11 @@
   <script>window.jQuery || document.write("<script src='{{ STATIC_URL }}js/libs/jquery-1.7.1{% if not debug %}.min{% endif %}.js'>\x3C/script>")</script>
   <script src="{{ STATIC_URL }}js/libs/bootstrap.js?v=2012102201"></script>
 
-  {% block includes %}{% endblock %}
+  {% block default_includes %}
+    {% google_analytics %}
+  {% endblock %}
+
+  {% block page_includes %}{% endblock %}
 
   {% block page_script %}{% endblock %}
 </body>
