Add Gatherball logo

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -32,3 +32,16 @@
 #footer .wrapper .type a {
   color: #486673;
 }
+
+.ui-ben {
+  margin-top: 20px;
+  font-size: 17px;
+}
+
+.ui-gatherball-tagline {
+  color: #53d9df;
+}
+
+.ui-gatherball-logo {
+  margin-top: 10px;
+}
