--- a/lvfu/webapp/templates/base_webapp.html
+++ b/lvfu/webapp/templates/base_webapp.html
@@ -4,7 +4,7 @@
 
 {% block default_css %}
   {{ block.super }}
-  <link rel="stylesheet" href="{{ STATIC_URL }}css/app.css?v=2012102101" />
+  <link rel="stylesheet" href="{{ STATIC_URL }}css/app.css?v=2012102102" />
 {% endblock %}
 
 {% block body %}
@@ -47,8 +47,13 @@
             <a href="http://www.patagonia.com" target="_blank"><img src="{{ STATIC_URL }}img/sponsors/patagonia.jpg" /></a>
             <a href="http://www.ulticards.net/" target="_blank"><img src="{{ STATIC_URL }}img/sponsors/ulticards.jpg" /></a>
         </div>
-        <div class="type">Fantasy Ultimate is a project from <a href="https://www.facebook.com/TheUltimatePage" target="_blank">The Ultimate Page</a><br />
-            Brought to you by <a href="https://github.com/bendemboski" target="_blank">Ben Demboski</a>
+        <div class="type">
+            Fantasy Ultimate is a project from <a href="https://www.facebook.com/TheUltimatePage" target="_blank">The Ultimate Page</a><br />
+            <div class="ui-ben">
+              Brought to you by <a href="https://github.com/bendemboski" target="_blank">Ben Demboski</a> of gatherball</br>
+              <a href="https://gatherball.com"><img class="ui-gatherball-logo" src="{{ STATIC_URL }}img/sponsors/gatherball.png"/></a>
+              <div class="ui-gatherball-tagline">The Antidote To Reply-All Planning</div>
+            </div>
         </div>
     </div>
 </div>
