--- a/lvfu/webapp/templates/league.html
+++ b/lvfu/webapp/templates/league.html
@@ -35,15 +35,21 @@
     .ui-modal-owner-pic {
       margin-right: 10px;
     }
+    .ui-final-rank-header {
+      color: green;
+    }
 </style>
 {% endblock %}
 
 {% block body_content %}
 <div class="ui-leaderboard">
+    <h1 class="ui-final-rank-header">Final Rankings for USAU Club Championship Fantasy<span class="ui-asterisk">*</span></h1>
+
     <div class="clearfix">
         <ul class="nav nav-pills ui-leaderboard-pills" id="tabs">
             <li><a href="#all" data-toggle="tab">Everyone</a></li>
             <li><a href="#friends" data-toggle="tab">My Friends</a></li>
+            <li><a href="#players" data-toggle="tab">Top Players</a></li>
         </ul>
         <div class="ui-invite-friends">
             <a href="#" class="js-fb-send ui-fb-send-button"><img width="78" height="33" src="{{ STATIC_URL }}img/fb_send_button.png"/></a> invite more friends
@@ -102,6 +108,39 @@
             <div class="js-no-friends hide">None of your friends are playing :(</div>
             <div class="js-fb-not-connected hide">Unable to get your list of friends. Are you logged in to Facebook?</div>
         </div>
+        <div class="tab-pane" id="players">
+            <table class="table table-striped table-bordered">
+                <thead>
+                    <tr>
+                        <th></th>
+                        <th>Player</th>
+                        <th>Points</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for player in top_players %}
+                        <tr>
+                            <td>#{{ forloop.counter }}</td>
+                            <td><a target="_blank" href="{{ player.extra.lv_player.leaguevine_url }}">{{ player.extra.lv_player.first_name }} {{ player.extra.lv_player.last_name }}</a></td>
+                            <td>{{ player.score }}</td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+
+            <h4>
+                Get full stats from <a href="https://www.leaguevine.com/seasons/20063/usau-club-open-2012/player_stats/">Leaguevine</a>
+            </h4>
+        </div>
+    </div>
+
+    <div>
+        * We (The Ultimate Page, Leaguevine, and Ben Demboski) owe a gigantic thanks to Chris Burling, Zach Rabin,
+        Zack Purdy, and <a href="http://www.usaultimate.org/">USA Ultimate</a> for helping us capture, transcribe,
+        and record stats when things didn't go as we planned. As noted earlier, we had to call an audible almost
+        immediately because we weren't able to capture all stats for every game. That said, these fantasy scores
+        are final. And while they may not perfectly represent reality, they do perfectly represent every figure
+        we had at our disposal.
     </div>
 </div>
 
